--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -62,7 +62,7 @@
                         <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0">
                             <a href="/profile" class="dropdown-item">My Profile</a>
                             <!-- <a href="#" class="dropdown-item">Settings</a> -->
-                            <a id="logout-with-search" th:href="${logout}" class="dropdown-item d-flex gap-1">
+                            <a id="logout-with-search" th:href="@{/logout}" class="dropdown-item d-flex gap-1">
                                 <i class="bi bi-box-arrow-right text-danger"></i>Log Out</a>
                         </div>
                     </div>
