--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -375,7 +375,7 @@ ominus-bootstrap-4.min.js"></script>
 
                 // Show a confirmation dialog using Swal
                 Swal.fire({
-                    title: "Are you sure you want to edit?",
+                    title: "Are you sure want to edit?",
                     icon: "warning",
                     showCancelButton: true,
                     confirmButtonColor: "#3085d6",
