--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -484,7 +484,7 @@
         <div class="modal-dialog modal-dialog-centered modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
-                    <span>Are you sure you want to delete ?</span>
+                    <span>Are you sure want to delete ?</span>
                     <button class="btn btn-danger col me-1">YES</button>
                     <button class="btn btn-primary col" data-bs-dismiss="modal" aria-label="Close">NO</button>
                 </div>
