--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -352,24 +352,33 @@
     ];
 
     // If you want to initialize Quill for a specific element, you can do it like this:
-    let specificQuillEditor = document.querySelector("#description"); // Change the selector as needed
-    const a = new Quill(specificQuillEditor, {
-        modules: {
-            toolbar: toolbaroptions,
-        },
-        theme: "snow",
-    });
+
 
 
     $(document).ready(async function () {
+
+        let specificQuillEditor = document.querySelector("#description"); // Change the selector as needed
+        const a = new Quill(specificQuillEditor, {
+            modules: {
+                toolbar: toolbaroptions,
+            },
+            theme: "snow",
+        });
+
+        let getLoginUser;
         try {
-            const getLoginUser = await getUser();
+            getLoginUser = await getUser();
             console.log("Get Login User", getLoginUser)
+        } catch (error) {
+            console.log("Error getting the login user:", error);
+        }
 
 
         let data = [];
 
-         $.get('api/project/list/ID/1/IN_PROGRESS', function (userData) {
+            // const currentUser = await getUser();
+
+         $.get(`api/project/list/ID/1/IN_PROGRESS`, function (userData) {
                             data = userData; // Set the data array with the retrieved user data
 
                             const user_pic = $('#user_pic');
@@ -394,34 +403,38 @@
                  });
 
 
-            // Fetch client data
             let clientData = [];
 
             $.get('api/project/list/ID/1/IN_PROGRESS', function (clients) {
                 clientData = clients;
 
+                console.log(clientData)
+
                 const responsiblePartySelect = $('#responsible_party');
                 responsiblePartySelect.empty();
 
                 responsiblePartySelect.append($('<option>', {
-                    value: '',
                     text: 'Select Responsible Party',
                 }));
 
-
-                clientData.forEach(client => {
+                $.each(clientData.userList, function (index, client) {
+                    console.log(client)
                     responsiblePartySelect.append($('<option>', {
                         value: `client_${client.id}`,
-                        text: `Client: ${client.client.name}`,
+                        text: `Client: ${client.name}`,
                     }));
 
-                    // Add user options
-                    clientData.userList.forEach(user => {
-                        responsiblePartySelect.append($('<option>', {
-                            value: `user_${user.id}`,
-                            text: `User: ${user.name}`,
-                        }));
-                    });
+                    if (client.userList) {
+                        // Loop through the users within the client
+                        client.userList.forEach(user => {
+                            responsiblePartySelect.append($('<option>', {
+                                value: `user_${user.id}`,
+                                text: `User: ${user.name}`,
+                                data: { picUrl: user.picUrl },
+                                user: user,
+                            }));
+                        });
+                    }
                 });
             });
 
@@ -460,10 +473,10 @@
             }
 
 
-            const selectedUser = data.find(user => user.id == selectedUserId)
+            const selectedUser = data.userList.find(user => user.id == selectedUserId)
                 console.log("Selected User", selectedUserId);
 
-            const selectedResponsibleParty = data.find(user => user.id == responsible_party);
+            const selectedResponsibleParty = data.userList.find(user => user.id == responsible_party);
 
 
             if (!selectedUser) {
@@ -489,10 +502,8 @@
                 direct_cause: direct_cause,
                 responsible_party: selectedResponsibleParty,
                 issue_category: issue_category,
-                user_pic: selectedUser,
-                user_uploader: {
-                    id : uploaderId
-                },
+                user_pic: selectedUser.id,
+                user_uploader: uploaderId.id,
                 responsible_type: responsible_type,
 
             };
@@ -510,21 +521,21 @@
                     alert('Issue Created Successfully');
                 },
                 error: function (xhr, status, error) {
-                    console.error('Status:', status);
-                    console.error('Error:', error);
-                    console.error('Server response:', xhr.responseText);
+                    console.log('Status:', status);
+                    console.log('Error:', error);
+                    console.log('Server response:', xhr.responseText);
 
                     if (xhr.getResponseHeader('Content-Type') === 'application/json') {
                         // Handle JSON response
                         try {
                             const response = JSON.parse(xhr.responseText);
-                            console.error('JSON Response:', response);
+                            console.log('JSON Response:', response);
                         } catch (e) {
-                            console.error('JSON parsing error:', e);
+                            console.log('JSON parsing error:', e);
                         }
                     } else {
                         // Handle non-JSON response
-                        console.error('Non-JSON Response:', xhr.responseText);
+                        console.log('Non-JSON Response:', xhr.responseText);
                     }
 
                     alert('Error creating issue: ' + xhr.responseText);
@@ -533,9 +544,7 @@
             });
         });
 
-        } catch (error) {
-            console.error("Error getting the login user:", error);
-            }
+
 
     });
 
@@ -614,17 +623,17 @@
                                     $('#issue-edit-btn').data('issueId', data.id);
                                     $('#issueDetailModal').modal('show');
                                 } else {
-                                    console.error('No data received for issue ID:', issueId);
+                                    console.log('No data received for issue ID:', issueId);
                                 }
                             },
                             error: function(xhr, status, error) {
-                                console.error('AJAX error:', error);
+                                console.log('AJAX error:', error);
                             }
                         });
                     });
                 },
                 error: function (error) {
-                    console.error('Error fetching data:', error);
+                    console.log('Error fetching data:', error);
                 }
             });
         }
@@ -708,21 +717,21 @@
                     alert("Issue Updated Successfully");
                 },
                 error: function (xhr, status, error) {
-                    console.error('Status:', status);
-                    console.error('Error:', error);
-                    console.error('Server response:', xhr.responseText);
+                    console.log('Status:', status);
+                    console.log('Error:', error);
+                    console.log('Server response:', xhr.responseText);
 
                     if (xhr.getResponseHeader('Content-Type') === 'application/json') {
                         // Handle JSON response
                         try {
                             const response = JSON.parse(xhr.responseText);
-                            console.error('JSON Response:', response);
+                            console.log('JSON Response:', response);
                         } catch (e) {
-                            console.error('JSON parsing error:', e);
+                            console.log('JSON parsing error:', e);
                         }
                     } else {
                         // Handle non-JSON response
-                        console.error('Non-JSON Response:', xhr.responseText);
+                        console.log('Non-JSON Response:', xhr.responseText);
                     }
 
                     alert("Error updating issue: " + xhr.responseText);
