--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -298,7 +298,7 @@ ominus-bootstrap-4.min.js"></script>
 
                 // Show a confirmation dialog using Swal
                 Swal.fire({
-                    title: "Are you sure you want to change your password?",
+                    title: "Are you sure want to change your password?",
                     icon: "warning",
                     showCancelButton: true,
                     confirmButtonColor: "#3085d6",
@@ -395,7 +395,9 @@ ominus-bootstrap-4.min.js"></script>
                             contentType: 'application/json',
                             success: function (data) {
                                 console.log(data);
+                                console.log("New Name : ", usernameInput)
                                 showSuccess("Username changed successfully");
+                                $('#navbar-username-without-search').text(usernameInput);
                                 // Re-enable button
                                 $("#change-username-btn").html("Edit").attr("disabled", false);
                             },
