--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -64,7 +64,7 @@
 
             <!--  Issue list-->
             <div class="row row-cols-1" id="sort">
-<!--                issue list will be here-->
+                <!--                issue list will be here-->
 
             </div>
             <!--  Issue list end-->
@@ -73,7 +73,7 @@
     </div>
     <!-- Content End -->
 
-<!--    issue detail modal start-->
+    <!--    issue detail modal start-->
     <div class="modal fade" id="issueDetailModal" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
@@ -88,7 +88,7 @@
                     <div class="container-fluid">
                         <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-1 row-cols-xl-1 row-cols-xxl-1 gap-2">
                             <div class="col mb-3">
-                               <h5 class="icon-title"><i class="fas fa-wrench text-primary"></i> Corrective Action</h5>
+                                <h5 class="icon-title"><i class="fas fa-wrench text-primary"></i> Corrective Action</h5>
                                 <span class="editable text-wrap custom-left-margin" id="corrective_actionValue">
                                     <input type="text" class="form-control form-control-sm btn-space" id="corrective_actionInput" name="corrective_action" />
                                 </span>
@@ -245,7 +245,7 @@
 
 
 <!--    for select drop-drown-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>-->
 
 <!-- fontawesome -->
 <script src="/js/fontawesome.js"></script>
@@ -315,7 +315,7 @@
 
     import {getUser} from "/js/currentLoginUser.js";
     import {getTimeElapsed} from "/js/time.js";
-
+    import {getData} from "/js/api-function.js";
 
 
     console.log(await getUser());
@@ -352,7 +352,17 @@
     ];
 
     // If you want to initialize Quill for a specific element, you can do it like this:
+    let getLoginUser = await getUser();
 
+    console.log("current login user " , getLoginUser)
+
+    let data = [];
+
+    // const currentUser = await getUser();
+
+    const dataForIssue = await getData(`/api/project/list/ID/${getLoginUser.currentUser.id}/IN_PROGRESS`)
+
+    console.log(dataForIssue.id);
 
 
     $(document).ready(async function () {
@@ -365,83 +375,72 @@
             theme: "snow",
         });
 
-        let getLoginUser;
-        try {
-            getLoginUser = await getUser();
-            console.log("Get Login User", getLoginUser)
-        } catch (error) {
-            console.log("Error getting the login user:", error);
-        }
 
 
-        let data = [];
+        $.get(`api/project/list/ID/1/IN_PROGRESS`, function (userData) {
+            data = userData; // Set the data array with the retrieved user data
 
-            // const currentUser = await getUser();
-
-         $.get(`api/project/list/ID/1/IN_PROGRESS`, function (userData) {
-                            data = userData; // Set the data array with the retrieved user data
-
-                            const user_pic = $('#user_pic');
-                            user_pic.empty();
-                            user_pic.append($('<option>', {
-                                value: '',
-                                text: 'Select a Member',
-                                data: {picUrl: ''},
+            const user_pic = $('#user_pic');
+            user_pic.empty();
+            user_pic.append($('<option>', {
+                value: '',
+                text: 'Select a Member',
+                data: {picUrl: ''},
 
 
-                            }));
-                         if (userData.userList) {
-                         userData.userList.forEach(user => {
-                             user_pic.append($('<option>', {
-                                 value: user.id,
-                                 text: user.name,
-                                 data: { picUrl: user.picUrl },
-                                 user: user,
-                             }));
-                         });
-                     }
-                 });
+            }));
+            if (userData.userList) {
+                userData.userList.forEach(user => {
+                    user_pic.append($('<option>', {
+                        value: user.id,
+                        text: user.name,
+                        data: { picUrl: user.picUrl },
+                        user: user,
+                    }));
+                });
+            }
+        });
 
 
-            let clientData = [];
+        let clientData = [];
 
-            $.get('api/project/list/ID/1/IN_PROGRESS', function (clients) {
-                clientData = clients;
+        $.get('api/project/list/ID/1/IN_PROGRESS', function (clients) {
+            clientData = clients;
 
-                console.log(clientData)
+            console.log(clientData)
 
-                const responsiblePartySelect = $('#responsible_party');
-                responsiblePartySelect.empty();
+            const responsiblePartySelect = $('#responsible_party');
+            responsiblePartySelect.empty();
 
+            responsiblePartySelect.append($('<option>', {
+                text: 'Select Responsible Party',
+            }));
+
+            $.each(clientData.userList, function (index, client) {
+                console.log(client)
                 responsiblePartySelect.append($('<option>', {
-                    text: 'Select Responsible Party',
+                    value: `client_${client.id}`,
+                    text: `Client: ${client.name}`,
                 }));
 
-                $.each(clientData.userList, function (index, client) {
-                    console.log(client)
-                    responsiblePartySelect.append($('<option>', {
-                        value: `client_${client.id}`,
-                        text: `Client: ${client.name}`,
-                    }));
-
-                    if (client.userList) {
-                        // Loop through the users within the client
-                        client.userList.forEach(user => {
-                            responsiblePartySelect.append($('<option>', {
-                                value: `user_${user.id}`,
-                                text: `User: ${user.name}`,
-                                data: { picUrl: user.picUrl },
-                                user: user,
-                            }));
-                        });
-                    }
-                });
+                if (client.userList) {
+                    // Loop through the users within the client
+                    client.userList.forEach(user => {
+                        responsiblePartySelect.append($('<option>', {
+                            value: `user_${user.id}`,
+                            text: `User: ${user.name}`,
+                            data: { picUrl: user.picUrl },
+                            user: user,
+                        }));
+                    });
+                }
             });
+        });
 
 
 
 
-            $('#addIssue').on('click', async function () {
+        $('#addIssue').on('click', async function () {
             const title = $('#title').val();
             const description = a.root.innerHTML;
             const place = $('#place').val();
@@ -474,9 +473,12 @@
 
 
             const selectedUser = data.userList.find(user => user.id == selectedUserId)
-                console.log("Selected User", selectedUserId);
+            console.log("Selected User", selectedUserId);
 
             const selectedResponsibleParty = data.userList.find(user => user.id == responsible_party);
+
+
+            console.log("Responsible Party", selectedResponsibleParty);
 
 
             if (!selectedUser) {
@@ -505,7 +507,7 @@
                 user_pic: selectedUser.id,
                 user_uploader: uploaderId.id,
                 responsible_type: responsible_type,
-
+                // project_id : dataForIssue.id,
             };
 
             console.log('Request Data:', requestData);
