--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -598,7 +598,16 @@
 
                         document.querySelector("#project-detail-name").value = targetData.name;
 
-                        document.querySelector("#show-project-objective").innerHTML = targetData.objective;
+                        const objectiveQuill = new Quill("#show-project-objective", {
+                            modules: {
+                                toolbar: false,
+                            },
+                            theme: "snow",
+                        });
+
+                        objectiveQuill.enable(false)
+
+                        objectiveQuill.clipboard.dangerouslyPasteHTML(0, targetData.objective)
 
                         document.querySelector("#project-edit-duration").value = targetData.duration;
 
@@ -1874,44 +1883,6 @@
                                                                 class="accordion-body position-relative"
                                                                 id="show-project-objective"
                                                             >
-                                                                <strong
-                                                                    >This is the
-                                                                    third item's
-                                                                    accordion
-                                                                    body.</strong
-                                                                >
-                                                                It is hidden by
-                                                                default, until
-                                                                the collapse
-                                                                plugin adds the
-                                                                appropriate
-                                                                classes that we
-                                                                use to style
-                                                                each element.
-                                                                These classes
-                                                                control the
-                                                                overall
-                                                                appearance, as
-                                                                well as the
-                                                                showing and
-                                                                hiding via CSS
-                                                                transitions. You
-                                                                can modify any
-                                                                of this with
-                                                                custom CSS or
-                                                                overriding our
-                                                                default
-                                                                variables. It's
-                                                                also worth
-                                                                noting that just
-                                                                about any HTML
-                                                                can go within
-                                                                the
-                                                                <code
-                                                                    >.accordion-body</code
-                                                                >, though the
-                                                                transition does
-                                                                limit overflow.
                                                             </div>
                                                         </div>
                                                     </div>
